Bug 466522 - docked windows arrangement not stored/restored
Summary: docked windows arrangement not stored/restored
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.10.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-27 12:48 UTC by Martin Koller
Modified: 2023-03-05 14:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 10.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2023-02-27 12:48:10 UTC
I start
kdiff3 folder1 folder2
and see some random default dock arrangement (2 small docks at the left, right side empty).
I rearrange left bottom dock "merge info" to the right, "Directory merge" stays left.
I quit kdiff3 without doing anything else.
Restart the same -> docks again both left
Comment 1 michael 2023-03-05 14:10:56 UTC
Git commit 1f3fd38f8ad1d4f64215322e6ed6b2cb8464c23a by Michael Reeves.
Committed on 05/03/2023 at 14:04.
Pushed by mreeves into branch '1.10'.

Save/Restore dock position and size

Call setObjectName for QDockWidget per Qt docs.
In addition KParts::MainWindow does not  pass saveState/saveGeometry on to KDiff3App.
Manually save state for KDiff3App as well
FIXED-IN:10.0.1

(cherry picked from commit 26f7f0bef83737e9dabd75eec0e04767323d37ca)

M  +18   -5    src/kdiff3.cpp
M  +0    -1    src/kdiff3.h

https://invent.kde.org/sdk/kdiff3/commit/1f3fd38f8ad1d4f64215322e6ed6b2cb8464c23a
Comment 2 michael 2023-03-05 14:12:51 UTC
Git commit 90ad1b78cec7ec09c29cb0b88f48c07ef35ce099 by Michael Reeves.
Committed on 05/03/2023 at 14:03.
Pushed by mreeves into branch 'master'.

Save/Restore dock position and size

Call setObjectName for QDockWidget per Qt docs.
In addition KParts::MainWindow does not  pass saveState/saveGeometry on to KDiff3App.
Manually save state for KDiff3App as well
FIXED-IN:10.0.1

M  +18   -5    src/kdiff3.cpp
M  +0    -1    src/kdiff3.h

https://invent.kde.org/sdk/kdiff3/commit/90ad1b78cec7ec09c29cb0b88f48c07ef35ce099