Save/Restore dock position and size

Call setObjectName for QDockWidget per Qt docs.
In addition KParts::MainWindow does not  pass saveState/saveGeometry on to KDiff3App.
Manually save state for KDiff3App as well

BUG:466522
FIXED-IN:10.0.1